...
  settings: {
    title: 'Settings',
  },
  'civic-incubator-details-participants-tab': {
    title: 'Participants',
    search: 'Search participant',
    'add-participant': 'Add participant',
    'participant-item': '%{item} participant',
  },
  'civic-incubator-details-events-tab': {
    title: 'Lectures',
    search: 'Search lecture',
    'add-participant': 'Add participant',
    'add-event': 'Create event',
  },
  'peace-ambassadors-and-vdo': {
    vdo: {
      title: 'VDO',
    },
    'peace-ambassadors': {
...
    'number-of-active-members': 'Number of active members',
    'number-of-members': 'Number of Members',
  },
  home: {
    title: 'Home',
    vdo: 'VDO',
    'civic-incubators': 'Civic Incubators',
    'group-savings': 'Saving Groups',
    'peace-ambassadors': 'Peace Ambassadors',
    'my-tasks': 'My Tasks',
  },
  sync: {
    title: 'Synchronize',
  },
  stats: {
    title: 'Stats',
...
  },
  'my-tasks': {
    title: 'My tasks',
    pending: 'Pending',
    finished: 'Finished',
    'pending-task': 'Pending task',
    'pending-task-item': 'Pending task item',
    'finished-task': 'Finished task',
    'finished-task-item': 'Finished task item',
    'search-tasks': 'Search tasks',
  },
  error: {
    title: 'Something went wrong!',
    friendlySubtitle:
      "This is the screen that your users will see in production when an error is thrown. You'll want to customize this message (located in `app/i18n/en.json`) and probably the layout as well (`app/screens/error`). If you want to remove this entirely, check `app/app.tsx` for the <ErrorBoundary> component.",
...
