...

      <FormControl isInvalid={!isNil(errors.password)}>
        <FormControl.Label>{translate('login.password')}</FormControl.Label>
        <Input onChangeText={handleChange('password')} onBlur={handleBlur('password')} value={values.password} testID="password" placeholder="Qwerty12345@" secureTextEntry={isHiddingPassword} rightElement={<IconButton onPress={setIsHiddingPassword.bind(this, !isHiddingPassword)} colorScheme='lightText' icon={<Icon name={isHiddingPassword ? 'eye' : 'eye-off'} type="material-community" />} />}></Inp
        <FormControl.ErrorMessage>{errors.password}</FormControl.ErrorMessage>
      </FormControl>
      <Button testID="loginBtn" isLoading={state === 'pending'} onPress={handleSubmit}>
        login
      </Button>
    </VStack>
  )
})

